<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.udacity.shoestore.ListingFragment"
        android:label="@string/title_listing"
        tools:layout="@layout/fragment_listing">
        <action
            android:id="@+id/action_listingFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.shoestore.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_go_back"
            app:destination="@+id/listingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>